# TheSolanaApi

./: Cargo.toml  README.md  SECURITY.md
config/: validators.example.csv
src/: app_state.rs  config.rs  errors.rs  lib.rs  main.rs  routes.rs  validators.rs
tests/: proxy.rs
