[package]
name = "TheSolanaApi"
version = "0.1.0"
edition = "2024"

[lib]
name = "the_solana_api"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4.11.0", features = ["macros"] }
awc = "3.5.1"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
thiserror = "1.0"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2.5"
